--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
-  <title>Pat's Salmon Cookies</title>
+  <title>Salmon Cookie Sales Data</title>
 </head>
 
 <body>
@@ -18,6 +18,7 @@
   </main>
   <footer>
   </footer>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
