Adds some styling to city lists; makes related changes to app.js

--- a/sales.html
+++ b/sales.html
@@ -13,8 +13,11 @@
 
 <body>
   <header>
+    <h1>Salmon Cookie Sales Data</h1>
   </header>
   <main>
+    <section id="citiesSection">
+    </section>
   </main>
   <footer>
   </footer>
