Fixes data_styles.css typo

--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Salmon Cookie Lab" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="css/reset.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/data_style.css" rel="stylesheet" />
   <title>Salmon Cookie Sales Data</title>
 </head>
 
