Updates index.html styling; adds WIP 2nd table to sales.html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,120 @@
 
 <body>
   <header>
-    <h1>Pat's Samon Cookies</h1>
-    <img src="images/salmon.png" \>
+    <nav>
+      <ul>
+        <li>Fishy Origins</li>
+        <li><a href="sales.html">Private Sales</a></li>
+        <li>Contact Us</li>
+      </ul>
+    </nav>
+    <img id="logo" src="images/pats-logo-02.png" \>
   </header>
+  <aside>
+    <div class="city" id="seattle">
+      <h3>Seattle</h3>
+      <address>
+        123 E Place St.<br>
+        Seattle, WA 98120
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="tokyo">
+      <h3>Tokyo</h3>
+      <address>
+        〒279-0031<br>
+        千葉県浦安市<br>
+        舞浜1-1<br>
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="dubai">
+      <h3>Dubai</h3>
+      <address>
+        Al Gharbi Street<br>
+        Bahar Plaza<br>
+        Jumeirah Beach Residence<br>
+        Dubai, AE
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="paris">
+      <h3>Paris</h3>
+      <address>
+        56 rue Montorgueil<br>
+        75002 Paris
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="lima">
+      <h3>Lima</h3>
+      <address>
+        Av. Ica 112 con Av.<br>
+        Jiron de la Union<br>
+        Lima 511, Peru
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+  </aside>
   <main>
+    <h1>Pat's Salmon Cookies</h1>
+    <article>
+      <img class="feature" src="images/coffee-cup.png">
+      <h2>Dunk Those Fishy Cookies</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+    </article>
+    <article>
+      <img class="feature" src="images/assets/frosted-cookie.jpg">
+      <img class="feature" src="images/assets/cutter.jpeg">
+      <h2>Salmon Cutters Now Availible!</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+        est
+        laborum.</p>
+    </article>
+    <article>
+      <img class="feature" src="images/assets/shirt.jpg">
+      <h2>A Salmon on a T-Shirt!</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+    </article>
+    <article>
+      <img class="feature" src="images/assets/family.jpg">
+      <h2>Not Just for Pets; Humans Love Fish Flavored Cookies Too!</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+    </article>
+
   </main>
   <footer>
+    <img id="yum" src="images/fish_yum_invert.png" \>
+
+    <div id="salmon-languages">
+      <span lang="en">Salmon</span><span lang="fr">Saumon</span><span lang="ja">鮭</span><span
+        lang="ar">سلمون</span><span lang="es">Salmón</span>
+    </div>
 
   </footer>
 </body>
