--- a/sales.html
+++ b/sales.html
@@ -14,12 +14,15 @@
 <body>
   <header>
     <h1>Salmon Cookie Sales Data</h1>
+    <h2><a href="index.html">Return To Home</a>
   </header>
   <main>
     <section id="citiesSection">
     </section>
+    <section id="tosserSection"></section>
   </main>
   <footer>
+
   </footer>
   <script src="js/app.js"></script>
 </body>
