Adds basic form to sales.html

--- a/sales.html
+++ b/sales.html
@@ -20,6 +20,22 @@
     <section id="citiesSection">
     </section>
     <section id="tosserSection"></section>
+    <section>
+      <form>
+        <fieldset>
+          <legend>Add New City</legend>
+          <label>Enter New City Name: </label>
+          <input type="text" name="cityName"></input>
+          <label>Enter Minimum Customer Number: </label>
+          <input type="text" name="minCustomer"></input>
+          <label>Enter Maximum Customer Number: </label>
+          <input type="text" name="maxCustomer"></input>
+          <label>Enter Average Cookie Number Per Sale: </label>
+          <input type="text" name="averageCookie"></input>
+          <input type="submit"></input>
+          <fieldset>
+      </form>
+    </section>
   </main>
   <footer>
 
