Adds working form

--- a/sales.html
+++ b/sales.html
@@ -27,11 +27,11 @@
           <label>Enter New City Name: </label>
           <input type="text" name="cityName"></input>
           <label>Enter Minimum Customer Number: </label>
-          <input type="text" name="minCustomer"></input>
+          <input type="number" name="minCustomer"></input>
           <label>Enter Maximum Customer Number: </label>
-          <input type="text" name="maxCustomer"></input>
+          <input type="number" name="maxCustomer"></input>
           <label>Enter Average Cookie Number Per Sale: </label>
-          <input type="text" name="averageCookie"></input>
+          <input type="number" step="0.1" name="averageCookie"></input>
           <input type="submit"></input>
           <fieldset>
       </form>
