--- a/sales.html
+++ b/sales.html
@@ -7,37 +7,111 @@
   <meta name="description" content="Salmon Cookie Lab" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="css/reset.css" rel="stylesheet" />
-  <link href="css/sales.css" rel="stylesheet" />
-  <title>Salmon Cookie Sales Data</title>
+  <link href="css/style.css" rel="stylesheet" />
+  <title>Pat's Salmon Cookies</title>
 </head>
 
 <body>
   <header>
-    <h1>Salmon Cookie Sales Data</h1>
-    <h2><a href="index.html">Return To Home</a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Fishy Origins</a></li>
+        <li><a href="sales.html">Private Sales</a></li>
+        <li><a href="index.html">Contact Us</a></li>
+      </ul>
+    </nav>
+    <img id="logo" src="images/pats-logo-02.png" \>
   </header>
+  <aside>
+    <div class="city" id="seattle">
+      <h3>Seattle</h3>
+      <address>
+        123 E Place St.<br>
+        Seattle, WA 98120
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="tokyo">
+      <h3>Tokyo</h3>
+      <address>
+        〒279-0031<br>
+        千葉県浦安市<br>
+        舞浜1-1<br>
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="dubai">
+      <h3>Dubai</h3>
+      <address>
+        Al Gharbi Street<br>
+        Bahar Plaza<br>
+        Jumeirah Beach Residence<br>
+        Dubai, AE
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="paris">
+      <h3>Paris</h3>
+      <address>
+        56 rue Montorgueil<br>
+        75002 Paris
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+    <div class="city" id="lima">
+      <h3>Lima</h3>
+      <address>
+        Av. Ica 112 con Av.<br>
+        Jiron de la Union<br>
+        Lima 511, Peru
+      </address>
+      <p>Hours:</p>
+      <p>M-S 9AM-7PM</p>
+      <p>Sun 11AM-5PM</p>
+    </div>
+  </aside>
   <main>
+    <h1>Sales Numbers</h1>
+    <section id="formSection">
+      <form>
+        <fieldset>
+          <legend>Add New City</legend>
+          <div id="labels">
+            <label>Enter New City Name: </label>
+            <label>Enter Minimum Customer Number: </label>
+            <label>Enter Maximum Customer Number: </label>
+            <label>Enter Average Cookie Number Per Sale: </label>
+          </div>
+          <div id="inputs">
+            <input type="text" name="cityName"></input>
+            <input type="number" name="minCustomer"></input>
+            <input type="number" name="maxCustomer"></input>
+            <input type="number" name="averageCookie" step="0.1"></input>
+          </div>
+          <input id="button" type="submit"></input>
+        </fieldset>
+      </form>
+    </section>
     <section id="citiesSection">
     </section>
     <section id="tosserSection"></section>
     <section>
-      <form>
-        <fieldset>
-          <legend>Add New City</legend>
-          <label>Enter New City Name: </label>
-          <input type="text" name="cityName"></input>
-          <label>Enter Minimum Customer Number: </label>
-          <input type="number" name="minCustomer"></input>
-          <label>Enter Maximum Customer Number: </label>
-          <input type="number" name="maxCustomer"></input>
-          <label>Enter Average Cookie Number Per Sale: </label>
-          <input type="number" step="0.1" name="averageCookie"></input>
-          <input type="submit"></input>
-          <fieldset>
-      </form>
-    </section>
   </main>
   <footer>
+    <img id="yum" src="images/fish_yum_invert.png" \>
+
+    <div id="salmon-languages">
+      <span lang="en">Salmon</span><span lang="fr">Saumon</span><span lang="ja">鮭</span><span
+        lang="ar">سلمون</span><span lang="es">Salmón</span>
+    </div>
 
   </footer>
   <script src="js/app.js"></script>
