Updates CSS hovers, adds font familys and google font

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <header>
     <nav>
       <ul>
-        <li>Fishy Origins</li>
+        <li><a href="index.html">Fishy Origins</a></li>
         <li><a href="sales.html">Private Sales</a></li>
-        <li>Contact Us</li>
+        <li><a href="index.html">Contact Us</a></li>
       </ul>
     </nav>
     <img id="logo" src="images/pats-logo-02.png" \>
@@ -92,7 +92,7 @@
     <article>
       <img class="feature" src="images/assets/frosted-cookie.jpg">
       <img class="feature" src="images/assets/cutter.jpeg">
-      <h2>Salmon Cutters Now Availible!</h2>
+      <h2 id="double-feature-image">Salmon Cutters Now Availible!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
